subfiles linked to home page

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
              <li><a href="#">Home</a></li>
              </div>
             <div class = 'nav_list_item'>
-               <li><a href="#">Education</a></li>
+               <li><a href="education.html">Education</a></li>
              </div>
            <div class = 'nav_list_item'>
-             <li><a href="#">Work</a></li>
+             <li><a href="work.html">Work</a></li>
              </div>
            <div class = 'nav_list_item'>
-             <li><a href="#">certifications</a></li>
+             <li><a href="certifications.html">certifications</a></li>
              </div>
             <div class = 'nav_list_item'>
-               <li><a href="#">Contact</a></li>
+               <li><a href="contact.html">Contact</a></li>
              </div>
              
            </ul>
