--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Vinit Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinit Patel</title>
+    <title>Home Page</title>
     
 </head>
 <body>
