--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Digital Portfoilo</title>
+    <title>Vinit Patel</title>
     <meta charset="UTF-8">
     <meta name="description" content="digital CV">
     <meta name="keywords" content="HTML, CSS">
