--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,15 @@
         <meta name="keywords" content="HTML, CSS">
         <meta name="author" content="Vinit Patel">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vinit Patel</title>
+        <title>Contact</title>
         
     </head>
     <body>
-        <div>
+        <div class="title">
+            Contact
+        </div>
+        
+        <div class="content">
             <form>
                 <label>Get In Touch!!</label><br>
                 <input type="text" name="name" placeholder="Your name"><br>
