- fonts added -education finished -slider removed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Home Page</title>
     
 </head>
-<body>
+<body class="mainbody">
     
     <div class="container">
         <p class="name">
