--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title>Vinit Patel</title>
+        <title>Contact</title>
         <meta charset="UTF-8">
-        <meta name="description" content="digital CV">
+        <meta name="description" content="contact form">
         <meta name="keywords" content="HTML, CSS">
         <meta name="author" content="Vinit Patel">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact</title>
         
     </head>
     <body class="conbody">
@@ -15,6 +14,7 @@
         <section class="title">
             Contact
         </section>
+        <hr>
 
         <form>      
             <input name="name" type="text" class="feedback" placeholder="Name" />   
