minor edits and chages

--- a/education.html
+++ b/education.html
@@ -10,8 +10,13 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
         </head>
-        <body class="edbody">   
-          <a class="backlink" href="index.html" >home</a>
+        <body class="edbody">  
+          <div class="backlink"> &nbsp
+          <a  href="index.html" >home</a>
+          <a  href="education.html" >Education</a>
+          <a  href="work.html" >Work</a>
+          <a  href="contact.html" >contact</a>
+          </div>
         <section class="title">
             Education
           </section>
