--- a/work.html
+++ b/work.html
@@ -12,7 +12,12 @@
     
    
      <body class="worbody">
-            <a class="backlink" href="index.html" >home</a>
+        <section class="backlink"> 
+            <a  href="index.html" >home</a>
+            <a  href="education.html" >Education</a>
+            <a  href="work.html" >Work</a>
+            <a  href="contact.html" >contact</a>
+          </section>
             <section class="title">
                 WORK
             </section>
