--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@
         
     </head>
     <body class="conbody">
-        <a class="backlink" href="index.html" >home</a>
+        <section class="backlink"> 
+            <a  href="index.html" >home</a>
+            <a  href="education.html" >Education</a>
+            <a  href="work.html" >Work</a>
+            <a  href="contact.html" >contact</a>
+          </section>
         <section class="title">
             Contact
         </section>
