--- a/education.html
+++ b/education.html
@@ -11,14 +11,15 @@
             
         </head>
         <body class="edbody">  
-          <div class="backlink"> &nbsp
+          <div class="backlink">
           <a  href="index.html" >home</a>
           <a  href="education.html" >Education</a>
           <a  href="work.html" >Work</a>
           <a  href="contact.html" >contact</a>
           </div>
+          <hr>
         <section class="title">
-            Education
+            About
           </section>
           <hr>
         <section class="salforduni edsection">
