--- a/work.html
+++ b/work.html
@@ -18,21 +18,21 @@
             <a  href="work.html" >Work</a>
             <a  href="contact.html" >contact</a>
           </section>
+          <hr>
             <section class="title">
                 WORK
             </section>
             <hr>
             <h2 class="worh2">PowerBI</h2>
             <h3 class="worh3">PowerBI project for creating a responsive dasehboard on the COVID-19 crises in th United Kingdom.</h3>
-            <center>
             <section class="pbidb">
+                <iframe src="https://testlivesalfordac-my.sharepoint.com/personal/v_s_patel_edu_salford_ac_uk/_layouts/15/Doc.aspx?sourcedoc={66d50b46-97b1-43d3-8c5c-be8535eb5391}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="500px" height="300px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                 <iframe title="vinit" width="80%" height="80%" src="https://app.powerbi.com/reportEmbed?reportId=b6784104-be65-44b0-b511-ddc413534017&autoAuth=true&ctid=65b52940-f4b6-41bd-833d-3033ecbcf6e1" frameborder="0" allowFullScreen="true"></iframe>
             </section>
             <h3 class="worh3">PowerBI project for creating a responsive dasehboard for a twitter analysis using data provided by NodeXL.</h3>
             <section class="pbidb">
             <iframe title="@00641591" width="80%" height="80%" src="https://app.powerbi.com/reportEmbed?reportId=237ffd00-3927-4c1a-a68b-5ecb261e17e9&autoAuth=true&ctid=65b52940-f4b6-41bd-833d-3033ecbcf6e1" frameborder="0" allowFullScreen="true"></iframe>
         </section>
-            </center>
             
     </body>
 </html>
