--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     
       <head>
@@ -13,7 +14,7 @@
         <body class="edbody">  
           <div class="backlink">
           <a  href="index.html" >home</a>
-          <a  href="education.html" >Education</a>
+          <a  href="about.html" >About</a>
           <a  href="work.html" >Work</a>
           <a  href="contact.html" >contact</a>
           </div>
@@ -23,11 +24,20 @@
           </section>
           <hr>
         <section class="salforduni edsection">
+          <h1 class="proh1">Profile</h1> 
+          <p class="edpara"> 
+            A highly competent, ambitious individual who has developed a mature and responsible approach to any task entrusted. A versatile individual with strong teamwork skills gained through experience with a variety of job roles. A firm believer in a creative and practical approach, with a sharp eye for the finer points.
+           </p>
+           <hr>
+           <h1 class="proh1">Education</h1> 
+           <hr>
+
            <a href="https://www.salford.ac.uk/" target="_blank"> <h1 class="edh1">University of Salford</h1></a>
            <a href="https://www.salford.ac.uk/courses/undergraduate/business-management-innovation-and-technology" target="_blank"><h2 class="edh2">BSc (Hons) Bussiness Managment with Innovation and Techonology</h2></a>
             <p class="edpara"> 
                 In the BSc Business Management degree, I am developing a range of leadership and management skills that I need for business now and also learning how to recognise opportunities and be adaptable for the future. I have also build my own personal portfolio of professional evidence which has enhanced my CV and helped me in job applications and interviews. This course is taught at the Salford Business School which is allocated on the university campus near the Manchester city centre.
             </p>
+            <hr>
           
         <a href="https://bkbirlacentre.com" target="_blank"> <h1 class="edh1">Bk Birla Centre For education </h1></a>
       <h2 class="edh2">Secondary higher education</h2> 
