--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
@@ -12,7 +13,7 @@
     <body class="conbody">
         <section class="backlink"> 
             <a  href="index.html" >home</a>
-            <a  href="education.html" >Education</a>
+            <a  href="about.html" >about</a>
             <a  href="work.html" >Work</a>
             <a  href="contact.html" >contact</a>
           </section>
