--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         </p>
         <hr>
         <section class="sociallinks">
-        <h1><a id="linkedin" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Brnm%2F4B0HSVu2li9l14tWXg%3D%3D" target="_blank">linkedin</a>
-          <a id="github" href="https://github.com/patelvinit09" target="_blank">github</a>
-          <a id="codepen" href="https://codepen.io/vinitpatell">codepen</a></h1>
+        <h1><a id="linkedin" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Brnm%2F4B0HSVu2li9l14tWXg%3D%3D" target="_blank" alt="link to linkedin profile" accesskey="l">linkedin</a>
+          <a id="github" href="https://github.com/patelvinit09" target="_blank" alt="github profile link" accesskey="g">github</a>
+          <a id="codepen" href="https://codepen.io/vinitpatell" target="_blank" alt="codepen profile link" accesskey="c">codepen</a></h1>
          
         </section>
         <hr>
+        <!--code inspired form fronend.com-->
        <div class="popover" id="menu" >
         <div class = 'content border-gradient border-gradient-purple'>
          <a href="#" class="close"></a>
@@ -35,14 +36,11 @@
              <li><a href="#">Home</a></li>
              </div>
             <div class = 'nav_list_item'>
-               <li><a href="education.html">Education</a></li>
+               <li><a href="about.html">About</a></li>
              </div>
            <div class = 'nav_list_item'>
              <li><a href="work.html">Work</a></li>
              </div>
-           <!-- <div class = 'nav_list_item'>
-             <li><a href="certifications.html">certifications</a></li>
-             </div> -->
             <div class = 'nav_list_item'>
                <li><a href="contact.html">Contact</a></li>
              </div>
