--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     
       <head>
             <link rel="stylesheet" href="styles.css">
@@ -19,11 +19,11 @@
           <a  href="contact.html" >contact</a>
           </div>
           <hr>
-        <section class="title">
+        <div class="title">
             About
-          </section>
+          </div>
           <hr>
-        <section class="salforduni edsection">
+        <div class="salforduni edsection">
           <h1 class="proh1">Profile</h1> 
           <p class="edpara"> 
             A highly competent, ambitious individual who has developed a mature and responsible approach to any task entrusted. A versatile individual with strong teamwork skills gained through experience with a variety of job roles. A firm believer in a creative and practical approach, with a sharp eye for the finer points.
@@ -44,5 +44,5 @@
       <p class="edpara"> 
         Bk Birla Centre For Education, is a Senior Secondary School (XI-XII), affiliated to Central Board of Secondary Education (CBSE). The School is a Boys Boarding School, with classes from VI to XII. It is an English Medium school. The school is located in Talegaon Dabhade. BK Birla Centre For Education was established in 1998. It is a Trust and is part of Sarala Birla Group of Schools. The school is member of Indian Public School Conference.
        </p>
-    </section>  
+    </div>  
 </html>
