--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Vinit Patel</title>
@@ -18,12 +18,12 @@
             </a>
         </p>
         <hr>
-        <section class="sociallinks">
-        <h1><a id="linkedin" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Brnm%2F4B0HSVu2li9l14tWXg%3D%3D" target="_blank" alt="link to linkedin profile" accesskey="l">linkedin</a>
-          <a id="github" href="https://github.com/patelvinit09" target="_blank" alt="github profile link" accesskey="g">github</a>
-          <a id="codepen" href="https://codepen.io/vinitpatell" target="_blank" alt="codepen profile link" accesskey="c">codepen</a></h1>
+        <div class="sociallinks">
+        <h1><a id="linkedin" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Brnm%2F4B0HSVu2li9l14tWXg%3D%3D" target="_blank" accesskey="l">linkedin</a>
+          <a id="github" href="https://github.com/patelvinit09" target="_blank"  accesskey="g">github</a>
+          <a id="codepen" href="https://codepen.io/vinitpatell" target="_blank" accesskey="c">codepen</a></h1>
          
-        </section>
+        </div>
         <hr>
         <!--code inspired form fronend.com-->
        <div class="popover" id="menu" >
