--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
         <title>Contact</title>
@@ -11,16 +11,16 @@
         
     </head>
     <body class="conbody">
-        <section class="backlink"> 
+        <div class="backlink"> 
             <a  href="index.html" >home</a>
             <a  href="about.html" >about</a>
             <a  href="work.html" >Work</a>
             <a  href="contact.html" >contact</a>
-          </section>
+          </div>
           <hr>
-        <section class="title">
+        <div class="title">
             Contact
-        </section>
+        </div>
         <hr>
 
         <form>      
